# lean-vtk

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: build.yml
cmake/: FindLeanVTK.cmake  LeanVTK-config.cmake  LeanVTKConfig.cmake
include/: CMakeLists.txt  lean_vtk.hpp  leanvtk.hpp
src/: CMakeLists.txt  lean_vtk.cpp  leanvtk.cpp
tests/: CMakeLists.txt  catch.hpp  test_lean_vtk.cpp
